tests/paczka1/small_fuzzy/43256873.err
Error in line 3: Lzn4Z S741 38,25
Error in line 5: ea7r4Mlb A540 57,8
